application save tested

--- a/src/app/components/submission-records/forms/approval/approval.component.html
+++ b/src/app/components/submission-records/forms/approval/approval.component.html
@@ -62,7 +62,7 @@
                     <span class="spacer"></span>
                     <mat-form-field appearance="outline" class="half-width">
                       <mat-select placeholder="Jurisdiction of Issue" [(value)]="applicant.jurisdiction">
-                        <mat-option *ngFor="let option of jurisdictions" [value]="option">{{ option }}</mat-option>
+                        <mat-option *ngFor="let option of jurisdictions" [value]="option.key">{{ option.value }}</mat-option>
                       </mat-select>
                     </mat-form-field>
                     <div *ngIf="validationErrors['passportNumber']" class="error-message">
